# pylpc

./: LICENSE  README.md  main.py  pyproject.toml
pylpc/: lexer.py  parsers.py  pylpc.py
tests/: test_pylpc.py
